# urbanlextracker

./: .env.example  .gitignore  README.md  auth.py  database.py  digest.py  firebase.json  main.py  pyproject.toml  requirements.txt  scrapers.py  test_api5.py  test_format.py
.agents/workflows/: build_project.md  preview_project.md
.github/workflows/: ult-digest.yml
scripts/: populate_real_history.py  reset_db.py  seed_db.py  seed_hist.py
static/html/: alertas.html  alertas_claro.html  configuracion.html  dashboard.html  dashboard_alt.html  detalle.html  index.html  lectura.html  login.html  onboarding_exito.html  onboarding_fuentes.html  onboarding_plan.html  pricing.html  pricing_2.html  registro.html  reporte.html
static/js/: auth.js
