[project]
name = "myapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.2",
    "functions-framework>=3.10.1",
    "google-api-core[grpc,grpcgcp]>=2.25.2",
    "google-generativeai>=0.8.6",
    "markdown>=3.10.2",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
]
